fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@
     color: white;
 }
 
+.navbar-toggler {
+    border-color: rgba(255, 255, 255, 0.51);
+}
+
 
 
 .divider-white,
@@ -77,9 +81,15 @@
 
 @media screen and (min-width:768px) {
 
-    . container-sm .avatar{
+    .container-sm .avatar{
         width: 25%;
     }
+
+    .fs-6.fw-bold {
+
+
+    }
+
 }
 
 @media screen and (min-width:992px) {
